<resources>
    <string name="app_name">Coffee Calculator</string>
    <string name="pour_over_coffee">Pour Over Coffee</string>
    <string name="cold_brew_coffee">Cold Brew Coffee</string>
    <string name="base_coffee_label">Base Coffee:</string>
    <string name="base_water_label">Base Water:</string>
    <string name="grams">grams</string>
    <string name="milliliters">milliliters</string>
    <string name="select_calc"> Select which to calculate</string>
    <string name="coffee">Coffee</string>
    <string name="water">Water</string>
    <string name="enter_calc_amount">Enter amount of </string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>
</resources>